crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_create_vault_create_error_unsafe_permissions.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 16)"
---
┌ Paladin — create vault ──────────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /var/lib/paladin/vault.bin                                           │
│                                                                              │
│  Choose vault protection:                                                    │
│                                                                              │
│  ▶ Encrypted (recommended) — protect this vault with a passphrase.           │
│    Plaintext (insecure) — store secrets unencrypted on disk.                 │
│                                                                              │
│  ↑/↓ or j/k to select; Enter to continue; q or Esc to quit.                  │
│                                                                              │
│  unsafe permissions on /var/lib/paladin: vault directory mode 0755,          │
│  expected 0700.Run: chmod 0700 /var/lib/paladin                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
